--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -2,28 +2,45 @@
 layout: default
 ---
 
-<div class="post">
 
+<div class="post">
   <header class="post-header">
-    <h1 class="post-title">
-     {% if site.title == "blank" %}<span class="font-weight-bold">{{ site.first_name }}</span> {{ site.middle_name }} {{ site.last_name }}{% else %}{{ site.title }}{% endif %}
-    </h1>
-     <p class="desc">{{ page.description }}</p>
+
+    <div>
+      <center>
+      <table>
+      <tr>
+        <td style="padding:10px 90px 10px 0px">
+          <img width="210px" class="img-fluid z-depth-1 rounded" src="{{ page.profile.image | prepend: '/assets/img/' | relative_url }}" alt="{{ site.first_name }} {{ site.middle_name }} {{ site.last_name }}">
+            </td>
+        <td style="padding:10px">
+          <center>
+            <h1 class="post-title">
+              {% if site.title == "blank" %}<span class="font-weight-bold">{{ site.first_name }}</span> {{ site.middle_name }} {{ site.last_name }}{% else %}{{ site.title }}{% endif %}
+            </h1>
+            <b>Assistant Professor, ECE</b> <br> <b>Cornell University</b> <br>
+            Cornell Tech (NYC), <a href="http://csl.cornell.edu">Cornell CSL</a> <br>
+            <span style="font-size:15px"><a href="mailto:mohamed@cornell.edu">[mohamed@cornell.edu]</a> <a href="assets/pdf/cv.pdf">[cv]</a></span> </h1> <br>
+            <b>Researcher,</b> <b>Samsung AI</b> <br>
+          </center>
+          </td>
+      </tr>
+      </table>
+      </center>
+      <br>
+      </div>
+
   </header>
 
   <article>
-    {% if page.profile %}
-    <div class="profile float-{% if page.profile.align == 'left' %}left{% else %}right{% endif %}">
-      {% if page.profile.image %}
-        <img class="img-fluid z-depth-1 rounded" src="{{ page.profile.image | prepend: '/assets/img/' | relative_url }}">
-      {% endif %}
+
+    <div class="clearfix">
       {% if page.profile.address %}
-        <div class="address">
-          {{ page.profile.address }}
-        </div>
-      {% endif %}
-    </div>
+      <div class="address">
+        {{ page.profile.address }}
+      </div>
     {% endif %}
+    </div>
 
     <div class="clearfix">
       {{ content }}
