a bunch of changes

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,6 +12,8 @@
         <div class="navbar-brand social">
           {% include social.html %}
         </div>
+      {% else %}
+      <img width="200px" src="assets/img/cornell_logo_text.png" alt="Cornell">
       {% endif %}
       <!-- Navbar Toggle -->
       <button class="navbar-toggler collapsed ml-auto" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
