--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -10,20 +10,17 @@ layout: default
       <center>
       <table>
       <tr>
-        <td style="padding:10px 90px 10px 0px">
-          <img width="210px" class="img-fluid z-depth-1 rounded" src="{{ page.profile.image | prepend: '/assets/img/' | relative_url }}" alt="{{ site.first_name }} {{ site.middle_name }} {{ site.last_name }}">
-            </td>
-        <td style="padding:10px">
-          <center>
+        <td style="padding:10px;text-align:center">
             <h1 class="post-title">
               {% if site.title == "blank" %}<span class="font-weight-bold">{{ site.first_name }}</span> {{ site.middle_name }} {{ site.last_name }}{% else %}{{ site.title }}{% endif %}
             </h1>
-            <b>Assistant Professor, ECE</b> <br> <b>Cornell University</b> <br>
-            Cornell Tech (NYC), <a href="http://csl.cornell.edu">Cornell CSL</a> <br>
-            <span style="font-size:15px"><a href="mailto:mohamed@cornell.edu">[mohamed@cornell.edu]</a> <a href="assets/pdf/cv.pdf">[cv]</a></span> </h1> <br>
-            <b>Researcher,</b> <b>Samsung AI</b> <br>
-          </center>
-          </td>
+            <span style="font-size:17px;">
+            {{ page.description }}
+            </span>
+        </td>
+        <td style="padding:10px 40px 10px 40px">
+          <img width="210px" class="img-fluid z-depth-1 rounded" src="{{ page.profile.image | prepend: '/assets/img/' | relative_url }}" alt="{{ site.first_name }} {{ site.middle_name }} {{ site.last_name }}">
+        </td>
       </tr>
       </table>
       </center>
@@ -34,13 +31,13 @@ layout: default
 
   <article>
 
-    <div class="clearfix">
-      {% if page.profile.address %}
-      <div class="address">
-        {{ page.profile.address }}
-      </div>
-    {% endif %}
+    {% if site.announcement %}
+    <div class="alert alert-success">
+    <center>
+      <p> {{ site.announcement }} </p>
+    </center>
     </div>
+    {% endif %}
 
     <div class="clearfix">
       {{ content }}
