--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -417,6 +417,10 @@ footer.sticky-bottom {
           border-bottom: 1px solid;
           font-style: normal;
         }
+        font-size: 0.85rem;
+      }
+      .periodical {
+        font-size: 0.9rem;
       }
       .links {
         a.btn {
