--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -14,7 +14,7 @@
     {% if site.data.venues[entry.abbr] %}
     <abbr class="badge"><a href="{{site.data.venues[entry.abbr].url}}" target="_blank">{{entry.abbr}}</a></abbr>
     {% else %}
-    <abbr class="badge">{{entry.abbr}}</abbr>
+    <abbr class="badge z-depth-1">{{entry.abbr}}</abbr>
     {% endif %}  
   {% endif %}
   {% endif %}
