--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -19,7 +19,7 @@ layout: default
             </span>
         </td>
         <td style="padding:10px 40px 10px 40px">
-          <img width="210px" class="img-fluid z-depth-1 rounded" src="{{ page.profile.image | prepend: '/assets/img/' | relative_url }}" alt="{{ site.first_name }} {{ site.middle_name }} {{ site.last_name }}">
+          <img width="210px" class="img-fluid z-depth-1" src="{{ page.profile.image | prepend: '/assets/img/' | relative_url }}" alt="{{ site.first_name }} {{ site.middle_name }} {{ site.last_name }}">
         </td>
       </tr>
       </table>
