--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -317,8 +317,9 @@ footer.sticky-bottom {
   }
 
   .grid-item {
-    width: 250px;
-    margin-bottom: 10px;
+    width: 180px;
+    margin-bottom: 20px;
+    margin-right: 20px;
 
     a {
       color: black;
