a bunch of changes

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -32,9 +32,9 @@ layout: default
   <article>
 
     {% if site.announcement %}
-    <div class="alert alert-success">
+    <div class="alert alert-info">
     <center>
-      <p> {{ site.announcement }} </p>
+    {{ site.announcement }}
     </center>
     </div>
     {% endif %}
