--- a/_includes/courses.html
+++ b/_includes/courses.html
@@ -6,7 +6,7 @@
   {% endif %}
     <div class="card hoverable">
       {% if project.img %}
-      <img src="{{ project.img | relative_url }}" alt="project.description">
+      <img src="{{ project.img | relative_url }}" alt="{{ project.description }}">
       {% endif %}
       <div class="card-body">
         <h2 class="card-title">{{ project.title }}</h2>
