--- a/_includes/courses.html
+++ b/_includes/courses.html
@@ -1,4 +1,4 @@
-<div class="grid-item">
+<div class="grid-item-course">
   {% if project.redirect %}
   <a href="{{ project.redirect }}" target="_blank">
   {% else %}
