--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -375,6 +375,34 @@ footer.sticky-bottom {
       }
     }
   }
+   
+  .grid-item-course {
+    width: 360px;
+    margin-bottom: 20px;
+    margin-right: 20px;
+
+    a {
+      color: black;
+      text-decoration: none;
+
+      &:hover {
+        color: var(--global-theme-color);
+      }
+    }
+
+    .card {
+      img {
+        width: 100%;
+      }
+      .card-title {
+        color: $black-color;
+        font-size: 1.4rem;
+      }
+      .card-text {
+        font-size: 1rem;
+      }
+    }
+  }
 
   h2.category {
     color: $grey-color-light;
