--- a/_includes/courses.html
+++ b/_includes/courses.html
@@ -8,7 +8,7 @@
       <div class="row g-0">
         {% if project.img %}
         <div class="card-img col-md-6">
-          <img src="{{ project.img | relative_url }}" alt="project thumbnail">
+          <img style="max-width: 300px; object-fit: contain;" src="{{ project.img | relative_url }}" alt="project thumbnail">
         </div>
         <div class="col-md-6">
         {% else %}
