--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -4,7 +4,9 @@
 <div class="row">
   <div class="col-sm-2 abbr">
   {% if entry.abbr %}
-  {% if entry.type == "article" %}
+  {% if entry.abbr == "preprint" %}
+    <abbr class="badge" style="background-color: green">{{entry.abbr}}</abbr>
+  {% elsif entry.type == "article" %}
     {% if site.data.venues[entry.abbr] %}
     <abbr class="badge" style="background-color: purple"><a href="{{site.data.venues[entry.abbr].url}}" target="_blank">{{entry.abbr}}</a></abbr>
     {% else %}
