redirect to research group website instead of local teams page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -58,6 +58,12 @@
           </li>
           {% endif %}
           {% endfor %}
+          <!-- Group page -->
+           <li class="nav-item">
+              <a class="nav-link" href="https://abdelfattah-lab.github.io/">
+                Team
+              </a>
+          </li>
           {% if site.enable_darkmode %}
             <div class = "toggle-container">
               <a id = "light-toggle">
